--- a/v2/newcss.css
+++ b/v2/newcss.css
@@ -18,11 +18,28 @@ ul{
     float:left;
     width: 20%;
     font-size: 16px;
+    margin: 0px;
+}
+.menu{
+    left:1px;
+    border-collapse: collapse;
+}
+.arbo{
+    border-style: solid;
+    border-color: black;
+    background-color: lightskyblue;
+    border-radius: 10px;
+    padding: 5px;
+    text-align: center;
 }
 .arbo>a {
     text-decoration: none;
+    color: black;
 }
 .sousDossier {
+    border-top-style: solid;
+    border-top-color: black;
+    padding: 7px;
     display : none;
 }
 .sousDossier li {
