Generation de l'arborescence en utilisant la classe DirectoryIterator et utilisation de tablesorter afin d'ajouter un moyen de trier les colonnes

--- a/v2/newcss.css
+++ b/v2/newcss.css
@@ -77,6 +77,13 @@ ul{
     border-top: none;
     font-size: 14px;
 }
+
+.tabCSV th {
+    border-color: #707070;
+    border-style: solid;
+    border-width: 4px;
+    cursor: pointer;
+}
 .tabCSV td:hover{
     background-color: #CECECE;
 }
